KS-3923 : update release notes